Initial DB Changes : Added EF, DBContext, ConnectionString, Product Table and Migration

--- a/NtigraDemoMVC/appsettings.json
+++ b/NtigraDemoMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NtigraDemoConnectionString": "Server=DESKTOP-PMD6ALE;Database=NtigraDemoDB;Persist Security Info=True;User Id=sa;Password=shabbir@123;TrustServerCertificate=True;"
+  }
 }
