Added Purchase Controller and Add to Cart and Order Summary

--- a/NtigraDemoMVC/appsettings.json
+++ b/NtigraDemoMVC/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NtigraDemoConnectionString": "Server=DESKTOP-PMD6ALE;Database=NtigraDemoDB;Persist Security Info=True;User Id=sa;Password=shabbir@123;TrustServerCertificate=True;"
-  }
+  },
+  "DiscountOnPriceCap": 5000
 }
